Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pp/DebugInfo.pp

{*
 * Creates a new DebugLocation that describes a source location.
 * \param Line The line in the source file.
 * \param Column The column in the source file.
 * \param Scope The scope in which the location resides.
 * \param InlinedAt The scope where this location was inlined, if at all.
 *                  (optional).
 * \note If the item to which this location is attached cannot be
 *       attributed to a source line, pass 0 for the line and column.
  }
function LLVMDIBuilderCreateDebugLocation(Ctx:TLLVMContextRef; Line:dword; Column:dword; Scope:TLLVMMetadataRef; InlinedAt:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Get the line number of this debug location.
 * \param Location     The debug location.
 *
 * @see DILocation::getLine()
  }
function LLVMDILocationGetLine(Location:TLLVMMetadataRef):dword;cdecl;external;
{*
 * Get the column number of this debug location.
 * \param Location     The debug location.
 *
 * @see DILocation::getColumn()
  }
function LLVMDILocationGetColumn(Location:TLLVMMetadataRef):dword;cdecl;external;
{*
 * Get the local scope associated with this debug location.
 * \param Location     The debug location.
 *
 * @see DILocation::getScope()
  }
function LLVMDILocationGetScope(Location:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Get the "inline at" location associated with this debug location.
 * \param Location     The debug location.
 *
 * @see DILocation::getInlinedAt()
  }
function LLVMDILocationGetInlinedAt(Location:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Get the metadata of the file associated with a given scope.
 * \param Scope     The scope object.
 *
 * @see DIScope::getFile()
  }
function LLVMDIScopeGetFile(Scope:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Get the directory of a given file.
 * \param File     The file object.
 * \param Len      The length of the returned string.
 *
 * @see DIFile::getDirectory()
  }
(* Const before type ignored *)
function LLVMDIFileGetDirectory(File:TLLVMMetadataRef; Len:Pdword):Pchar;cdecl;external;
{*
 * Get the name of a given file.
 * \param File     The file object.
 * \param Len      The length of the returned string.
 *
 * @see DIFile::getFilename()
  }
(* Const before type ignored *)
function LLVMDIFileGetFilename(File:TLLVMMetadataRef; Len:Pdword):Pchar;cdecl;external;
{*
 * Get the source of a given file.
 * \param File     The file object.
 * \param Len      The length of the returned string.
 *
 * @see DIFile::getSource()
  }
(* Const before type ignored *)
function LLVMDIFileGetSource(File:TLLVMMetadataRef; Len:Pdword):Pchar;cdecl;external;
{*
 * Create a type array.
 * \param Builder        The DIBuilder.
 * \param Data           The type elements.
 * \param NumElements    Number of type elements.
  }
function LLVMDIBuilderGetOrCreateTypeArray(Builder:TLLVMDIBuilderRef; Data:PLLVMMetadataRef; NumElements:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create subroutine type.
 * \param Builder        The DIBuilder.
 * \param File            The file in which the subroutine resides.
 * \param ParameterTypes  An array of subroutine parameter types. This
 *                        includes return type at 0th index.
 * \param NumParameterTypes The number of parameter types in \c ParameterTypes
 * \param Flags           E.g.: \c LLVMDIFlagLValueReference.
 *                        These flags are used to emit dwarf attributes.
  }
function LLVMDIBuilderCreateSubroutineType(Builder:TLLVMDIBuilderRef; File:TLLVMMetadataRef; ParameterTypes:PLLVMMetadataRef; NumParameterTypes:dword; Flags:TLLVMDIFlags):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a macro.
 * @param Builder         The DIBuilder.
 * @param ParentMacroFile Macro parent (could be NULL).
 * @param Line            Source line number where the macro is defined.
 * @param RecordType      DW_MACINFO_define or DW_MACINFO_undef.
 * @param Name            Macro name.
 * @param NameLen         Macro name length.
 * @param Value           Macro value.
 * @param ValueLen        Macro value length.
  }
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateMacro(Builder:TLLVMDIBuilderRef; ParentMacroFile:TLLVMMetadataRef; Line:dword; RecordType:TLLVMDWARFMacinfoRecordType; Name:Pchar; 
           NameLen:Tsize_t; Value:Pchar; ValueLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information temporary entry for a macro file.
 * List of macro node direct children will be calculated by DIBuilder,
 * using the \p ParentMacroFile relationship.
 * @param Builder         The DIBuilder.
 * @param ParentMacroFile Macro parent (could be NULL).
 * @param Line            Source line number where the macro file is included.
 * @param File            File descriptor containing the name of the macro file.
  }
function LLVMDIBuilderCreateTempMacroFile(Builder:TLLVMDIBuilderRef; ParentMacroFile:TLLVMMetadataRef; Line:dword; File:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for an enumerator.
 * @param Builder        The DIBuilder.
 * @param Name           Enumerator name.
 * @param NameLen        Length of enumerator name.
 * @param Value          Enumerator value.
 * @param IsUnsigned     True if the value is unsigned.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateEnumerator(Builder:TLLVMDIBuilderRef; Name:Pchar; NameLen:Tsize_t; Value:Tint64_t; IsUnsigned:TLLVMBool):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for an enumeration.
 * \param Builder        The DIBuilder.
 * \param Scope          Scope in which this enumeration is defined.
 * \param Name           Enumeration name.
 * \param NameLen        Length of enumeration name.
 * \param File           File where this member is defined.
 * \param LineNumber     Line number.
 * \param SizeInBits     Member size.
 * \param AlignInBits    Member alignment.
 * \param Elements       Enumeration elements.
 * \param NumElements    Number of enumeration elements.
 * \param ClassTy        Underlying type of a C++11/ObjC fixed enum.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateEnumerationType(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; 
           LineNumber:dword; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; Elements:PLLVMMetadataRef; NumElements:dword; 
           ClassTy:TLLVMMetadataRef):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a union.
 * \param Builder      The DIBuilder.
 * \param Scope        Scope in which this union is defined.
 * \param Name         Union name.
 * \param NameLen      Length of union name.
 * \param File         File where this member is defined.
 * \param LineNumber   Line number.
 * \param SizeInBits   Member size.
 * \param AlignInBits  Member alignment.
 * \param Flags        Flags to encode member attribute, e.g. private
 * \param Elements     Union elements.
 * \param NumElements  Number of union elements.
 * \param RunTimeLang  Optional parameter, Objective-C runtime version.
 * \param UniqueId     A unique identifier for the union.
 * \param UniqueIdLen  Length of unique identifier.
  }
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateUnionType(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; 
           LineNumber:dword; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; Flags:TLLVMDIFlags; Elements:PLLVMMetadataRef; 
           NumElements:dword; RunTimeLang:dword; UniqueId:Pchar; UniqueIdLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for an array.
 * \param Builder      The DIBuilder.
 * \param Size         Array size.
 * \param AlignInBits  Alignment.
 * \param Ty           Element type.
 * \param Subscripts   Subscripts.
 * \param NumSubscripts Number of subscripts.
  }
function LLVMDIBuilderCreateArrayType(Builder:TLLVMDIBuilderRef; Size:Tuint64_t; AlignInBits:Tuint32_t; Ty:TLLVMMetadataRef; Subscripts:PLLVMMetadataRef; 
           NumSubscripts:dword):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a vector type.
 * \param Builder      The DIBuilder.
 * \param Size         Vector size.
 * \param AlignInBits  Alignment.
 * \param Ty           Element type.
 * \param Subscripts   Subscripts.
 * \param NumSubscripts Number of subscripts.
  }
function LLVMDIBuilderCreateVectorType(Builder:TLLVMDIBuilderRef; Size:Tuint64_t; AlignInBits:Tuint32_t; Ty:TLLVMMetadataRef; Subscripts:PLLVMMetadataRef; 
           NumSubscripts:dword):TLLVMMetadataRef;cdecl;external;
{*
 * Create a DWARF unspecified type.
 * \param Builder   The DIBuilder.
 * \param Name      The unspecified type's name.
 * \param NameLen   Length of type name.
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateUnspecifiedType(Builder:TLLVMDIBuilderRef; Name:Pchar; NameLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a basic
 * type.
 * \param Builder     The DIBuilder.
 * \param Name        Type name.
 * \param NameLen     Length of type name.
 * \param SizeInBits  Size of the type.
 * \param Encoding    DWARF encoding code, e.g. \c LLVMDWARFTypeEncoding_float.
 * \param Flags       Flags to encode optional attribute like endianity
  }
(* Const before type ignored *)
function LLVMDIBuilderCreateBasicType(Builder:TLLVMDIBuilderRef; Name:Pchar; NameLen:Tsize_t; SizeInBits:Tuint64_t; Encoding:TLLVMDWARFTypeEncoding; 
           Flags:TLLVMDIFlags):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a pointer.
 * \param Builder     The DIBuilder.
 * \param PointeeTy         Type pointed by this pointer.
 * \param SizeInBits        Size.
 * \param AlignInBits       Alignment. (optional, pass 0 to ignore)
 * \param AddressSpace      DWARF address space. (optional, pass 0 to ignore)
 * \param Name              Pointer type name. (optional)
 * \param NameLen           Length of pointer type name. (optional)
  }
(* Const before type ignored *)
function LLVMDIBuilderCreatePointerType(Builder:TLLVMDIBuilderRef; PointeeTy:TLLVMMetadataRef; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; AddressSpace:dword; 
           Name:Pchar; NameLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
{*
 * Create debugging information entry for a struct.
 * \param Builder     The DIBuilder.
 * \param Scope        Scope in which this struct is defined.
 * \param Name         Struct name.
 * \param NameLen      Struct name length.
 * \param File         File where this member is defined.
 * \param LineNumber   Line number.
 * \param SizeInBits   Member size.
 * \param AlignInBits  Member alignment.
 * \param Flags        Flags to encode member attribute, e.g. private
 * \param Elements     Struct elements.
 * \param NumElements  Number of struct elements.
 * \param RunTimeLang  Optional parameter, Objective-C runtime version.
 * \param VTableHolder The object containing the vtable for the struct.
 * \param UniqueId     A unique identifier for the struct.
 * \param UniqueIdLen  Length of the unique identifier for the struct.
  }
(* Const before type ignored *)
(* Const before type ignored *)
function LLVMDIBuilderCreateStructType(Builder:TLLVMDIBuilderRef; Scope:TLLVMMetadataRef; Name:Pchar; NameLen:Tsize_t; File:TLLVMMetadataRef; 
           LineNumber:dword; SizeInBits:Tuint64_t; AlignInBits:Tuint32_t; Flags:TLLVMDIFlags; DerivedFrom:TLLVMMetadataRef; 
           Elements:PLLVMMetadataRef; NumElements:dword; RunTimeLang:dword; VTableHolder:TLLVMMetadataRef; UniqueId:Pchar; 
           UniqueIdLen:Tsize_t):TLLVMMetadataRef;cdecl;external;
